--- a/ht_invoice_report/report/default_invoice_report.xml
+++ b/ht_invoice_report/report/default_invoice_report.xml
@@ -2,6 +2,26 @@
 <odoo>
     <data>
 
+
+
+        <template id="web.address_layout">
+            <t t-set="colclass" t-value="('col-sm-5' if report_type == 'html' else 'col-5') + ' ml-auto'"/>
+            <t t-if="address">
+                <div class="address row">
+                    <t t-if="information_block">
+                        <t t-set="colclass" t-value="'col-5 offset-1'"/>
+                        <div name="information_block" class="col-6">
+<!--                            <t t-out="information_block"/>-->
+                        </div>
+                    </t>
+                    <div name="address" t-att-class="colclass">
+                        <t t-esc="address"/>
+                    </div>
+                </div>
+            </t>
+        </template>
+
+
         <template id="account.report_invoice_document">
             <t t-call="web.external_layout">
                 <t t-set="o" t-value="o.with_context(lang=lang)" />
@@ -358,7 +378,7 @@
                             <span t-field="o.partner_id.vat"/>
                         </p>
                     </t>
-<!--                    <t t-call="web.address_layout"/>-->
+                    <t t-call="web.address_layout"/>
                 </div>
                 <t t-out="0"/>
             </div>
