--- a/ht_invoice_report/report/default_invoice_report.xml
+++ b/ht_invoice_report/report/default_invoice_report.xml
@@ -16,14 +16,14 @@
                     </t>
                     <div name="address" t-att-class="colclass">
                         <t t-if="o._name == 'sale.order'">
-                            <strong> Cliente: <span t-field="o.partner_id"/></strong>
+                            <div><strong> Cliente: <span t-field="o.partner_id"/></strong></div>
                             <div>
                                 <div>Dirección: <address t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}' class="mb-0"/></div>
                                 <div>Teléfono: <span t-field="o.partner_id.mobile"/></div>
                             </div>
                         </t>
                         <t t-else="">
-                            <strong><span t-field="o.partner_id"/></strong>
+                            <div><strong><span t-field="o.partner_id"/></strong></div>
                             <div>
                                 <address t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}' class="mb-0"/>
                                 <p t-if="o.partner_id.vat">
