--- a/ht_invoice_report/report/default_invoice_report.xml
+++ b/ht_invoice_report/report/default_invoice_report.xml
@@ -15,7 +15,15 @@
                         </div>
                     </t>
                     <div name="address" t-att-class="colclass">
-                        <t t-if="o._name == 'sale.order'">
+                        <t t-if="o._name == 'purchase.order'">
+
+                            <div><strong> Proveedor: <span t-field="o.partner_id"/></strong></div>
+                            <div>
+                                <div>Dirección: <address t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}' class="mb-0"/></div>
+                                <div>Teléfono: <span t-field="o.partner_id.mobile"/></div>
+                            </div>
+                        </t>
+                        <t t-elif="o._name == 'sale.order'">
                             <div><strong> Cliente: <span t-field="o.partner_id"/></strong></div>
                             <div>
                                 <div>Dirección: <address t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}' class="mb-0"/></div>
