--- a/ht_invoice_report/report/default_invoice_report.xml
+++ b/ht_invoice_report/report/default_invoice_report.xml
@@ -348,8 +348,8 @@
                     <p t-if="o.move_type in ('out_invoice', 'in_refund') and o.payment_reference" name="payment_communication">
                         Please use the following communication for your payment : <b><span t-field="o.payment_reference"/></b>
                     </p>
-                    <p>Rango: <span  t-field="o.journal_id.rango"/></p>
-                    <p>Fecha limite: <span  t-field="o.journal_id.fecha_limite"/></p>
+                    <p t-if="o.journal_id.rango">Rango: <span  t-field="o.journal_id.rango"/></p>
+                    <p t-if="o.journal_id.fecha_limite">Fecha limite: <span  t-field="o.journal_id.fecha_limite"/></p>
                     <p t-if="o.invoice_payment_term_id" name="payment_term">
                         <span t-field="o.invoice_payment_term_id.note"/>
                     </p>
