--- a/ht_invoice_report/report/default_invoice_report.xml
+++ b/ht_invoice_report/report/default_invoice_report.xml
@@ -109,7 +109,7 @@
                         <t t-else="">RTN</t>: <span t-field="o.partner_id.vat"/></div>
                 </t>
                 <div class="page" style="font-size:12px !important">
-                    <h2 style="color: red !important">
+                    <h3 style="color: red !important">
                         <br/>
                         <span t-if="o.move_type == 'out_invoice' and o.state == 'posted'">No. de Factura: </span>
                         <span t-if="o.move_type == 'out_invoice' and o.state == 'draft'">Proyecto de factura</span>
@@ -122,7 +122,7 @@
                             <span  t-field="o.journal_id.no_de_factura"/><span  t-field="o.name"/>
                         </t>
 
-                    </h2>
+                    </h3>
 
                     <div id="informations" class="row mt32 mb32">
                         <div class="col-auto col-3 mw-100 mb-2" t-if="o.invoice_date" name="invoice_date">
@@ -151,12 +151,12 @@
 
                     <table class="table table-sm o_main_table" name="invoice_line_table">
                         <thead>
-                            <tr style="font-size:12px !important">
+                            <tr style="font-size:10px !important">
                                 <th name="th_description" class="text-left"><span>Description</span></th>
                                 <th name="th_quantity" class="text-right"><span>Quantity</span></th>
                                 <th name="th_priceunit" t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"><span>Unit Price</span></th>
                                 <th name="th_price_unit"  t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
-                                    <span>Descuentos (%)</span>
+                                    <span>Descuentos</span>
                                 </th>
                                 <th name="th_taxes" t-attf-class="text-left {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"><span>Taxes</span></th>
                                 <th name="th_subtotal" class="text-right">
@@ -184,7 +184,7 @@
                                             <span class="text-nowrap" t-field="line.price_unit"/>
                                         </td>
                                         <td t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
-                                            <span class="text-nowrap" t-field="line.discount"/>
+                                            <span class="text-nowrap" t-field="line.discount"/>%
                                         </td>
                                         <td t-attf-class="text-left {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
                                             <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.tax_ids))" id="line_tax_ids"/>
