--- a/ht_invoice_report/report/default_invoice_report.xml
+++ b/ht_invoice_report/report/default_invoice_report.xml
@@ -75,7 +75,7 @@
                                 <div>
                                     <address t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}' class="mb-0"/>
                                     <p t-if="o.partner_id.vat">
-                                        <t t-esc="o.company_id.account_fiscal_country_id.vat_label or 'RTN'"/>:
+                                        RTN
                                         <span t-field="o.partner_id.vat"/>
                                     </p>
                                 </div>
@@ -86,7 +86,7 @@
                             <div>
                                 <address t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}' class="mb-0"/>
                                 <p t-if="o.partner_id.vat">
-                                    <t t-esc="o.company_id.account_fiscal_country_id.vat_label or 'RTN'"/>:
+                                    RTN
                                     <span t-field="o.partner_id.vat"/>
                                 </p>
                             </div>
@@ -420,7 +420,7 @@
                              t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'
                         />
                         <p t-if="company.partner_id.vat">
-                            <t t-esc="o.company_id.account_fiscal_country_id.vat_label or 'RTN'"/>:
+                            RTN
                             <span t-field="company.partner_id.vat"/>
                         </p>
                     </div>
@@ -440,7 +440,7 @@
                     <t t-set="address">
                         <address t-field="o.partner_id" t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' class="mb-0"/>
                         <p t-if="o.partner_id.vat">
-                            <t t-esc="o.company_id.account_fiscal_country_id.vat_label or 'RTN'"/>:
+                            RTN
                             <span t-field="o.partner_id.vat"/>
                         </p>
                     </t>
